--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <h3><a href="./public/My Story.html">Motivational Tips</a></h3>
     <img src="./assets/images/mystory.png" height="200" alt="dove ascending">
     <hr />
-<h5><a href="./public/about.html">About Me <a href="./public/contact.html">Contact Me</a></h5>
+<h5><a href="./public/about.html">About Me</a>
+    <a href="./public/contact.html">Contact Me</a></h5>
+
 </body>
 
 </html>
